repo inorde brengen

--- a/SlnLes01HerhalingAanvulling/WpfComplexiteit/MainWindow.xaml
+++ b/SlnLes01HerhalingAanvulling/WpfComplexiteit/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="WpfComplexityAnalysis.MainWindow"
+﻿
+    <Window x:Class="WpfComplexityAnalysis.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Woord Complexiteit Applicatie" Height="200" Width="400">
