--- a/SlnLes01HerhalingAanvulling/WpfComplexiteit/MainWindow.xaml
+++ b/SlnLes01HerhalingAanvulling/WpfComplexiteit/MainWindow.xaml
@@ -2,7 +2,7 @@
     <Window x:Class="WpfComplexityAnalysis.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Woord Complexiteit Applicatie" Height="200" Width="400">
+        Title="WpfComplexiteit" Height="200" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -11,7 +11,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBox x:Name="inputTextBox" Grid.Row="3" Margin="10,21,269,-23"/>
+        <TextBox x:Name="inputTextBox" Grid.Row="3" Margin="10,21,269,-23" TextChanged="inputTextBox_TextChanged"/>
         <Button Content="ANALYSEER" Click="Analyseer_Click" Grid.Row="3" Margin="157,20,127,-24"/>
         <TextBlock x:Name="resultTextBlock1" Grid.Row="3" Margin="21,52,190,-57"/>
         <TextBlock x:Name="resultTextBlock2" Grid.Row="3" Margin="21,78,169,-83"/>
